[gd_scene load_steps=5 format=3 uid="uid://2elikixd2mpj"]

[ext_resource type="Script" path="res://scenes/player.gd" id="1_mqfbn"]
[ext_resource type="Script" path="res://scenes/tile_bag.gd" id="2_gcavq"]
[ext_resource type="Script" path="res://scenes/player_hand.gd" id="3_b3yqm"]
[ext_resource type="Script" path="res://scenes/discard_zone.gd" id="4_c5561"]

[node name="Player" type="Node"]
script = ExtResource("1_mqfbn")

[node name="DiscardButton" type="Button" parent="."]
offset_left = 132.0
offset_top = 445.0
offset_right = 233.0
offset_bottom = 476.0
text = "discard tiles"

[node name="PlaceButton" type="Button" parent="."]
offset_left = 145.0
offset_top = 487.0
offset_right = 231.0
offset_bottom = 518.0
text = "place tiles"

[node name="RefillButton" type="Button" parent="."]
offset_left = 146.0
offset_top = 530.0
offset_right = 204.0
offset_bottom = 560.0
text = "refill tiles"

[node name="TileBag" type="Node" parent="."]
script = ExtResource("2_gcavq")

[node name="BagTitle" type="Label" parent="TileBag"]
offset_left = 500.0
offset_top = 83.0
offset_right = 540.0
offset_bottom = 106.0
text = "Bag"

[node name="BagContentsList" type="Label" parent="TileBag"]
offset_left = 494.0
offset_top = 124.0
offset_right = 534.0
offset_bottom = 147.0

[node name="PlayerHand" type="Node" parent="."]
script = ExtResource("3_b3yqm")

[node name="TitleHand" type="Label" parent="PlayerHand"]
offset_left = 153.0
offset_top = 82.0
offset_right = 270.0
offset_bottom = 105.0
text = "Hand"

[node name="HandListTiles" type="ItemList" parent="PlayerHand"]
offset_left = 111.0
offset_top = 116.0
offset_right = 244.0
offset_bottom = 426.0
select_mode = 1

[node name="DiscardZone" type="Node" parent="."]
script = ExtResource("4_c5561")

[node name="TitleDiscard" type="Label" parent="DiscardZone"]
offset_left = 327.0
offset_top = 84.0
offset_right = 386.0
offset_bottom = 107.0
text = "Discard"

[node name="DiscardContentsList" type="Label" parent="DiscardZone"]
offset_left = 339.0
offset_top = 121.0
offset_right = 379.0
offset_bottom = 144.0

[connection signal="pressed" from="DiscardButton" to="." method="_on_discard_button_pressed"]
[connection signal="pressed" from="RefillButton" to="." method="_on_refill_button_pressed"]
[connection signal="item_selected" from="PlayerHand/HandListTiles" to="PlayerHand" method="_on_hand_list_tiles_item_selected"]
